5-Gateway-API/1-GWA-Basics/manifest/2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-service
spec:
  type: ClusterIP
  selector:
    app: myapp1
  ports:
    - name: http
      port: 80
      targetPort: 80
